--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,8 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.container {
+  width: 85%;
+  max-width: 1500px;
+  margin: 0 auto;
 }
