--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,6 +10,9 @@ $font-size-xxxl: 3rem;
 
 // colors
 $primary-color: #1b98f5;
-$default-text-color: #0d0d0d;
+$default-text-color: #242b2e;
+$text-color-dark: #0d0d0d;
+$text-color-light: #758283;
 $white-color: #fff;
 $black-color: #000;
+$border-color: #e0e0e0;
