--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 @import './variables';
+@import './mixins';
+@import './override';
 @import './global-classes';
-@import './prime-react-custo';
 
 // comonents import
 @import './components';
@@ -14,6 +15,11 @@ body {
   color: $default-text-color;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
+  line-height: 1.5;
+}
+ul,
+ol {
+  margin-block-start: $font-size-md;
 }
 
 a {
